# myoboku

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  myoboku.service  pyproject.toml
app/config/: .env.dist  api.py  authentication.py  celery.py  decorators.py  enums.py  exceptions.py  sdk.py  settings.py  urls.py  utils.py
app/config/security/: authentication.py
app/myoboku/: admin.py  api.py  exceptions.py  external.py  models.py  schemas.py
app/myoboku/migrations/: 0001_initial.py
app/ovh_server/: admin.py  api.py  models.py  schemas.py  tasks.py
app/userauth/: admin.py  models.py
app/userauth/migrations/: 0001_initial.py
scripts/: run.py  setup.py  unregister.py
