[tool.isort]
profile = "black"
src_paths = ["app"]

[tool.pycln]
all = true

[tool.poetry]
name = "myoboku"
version = "0.1.0"
description = ""
authors = ["PN-picsell <pierre-nicolas@picsellia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
python-dotenv = "^1.0.0"
django-ninja = "^0.22.2"
psycopg2-binary = "^2.9.7"
orjson = "^3.9.3"
django-cors-headers = "^4.2.0"
django-redis = "^5.2.0"
essential-generators = "^1.0"
pre-commit = "^3.3.3"
docker = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
